updates sample.env for demo 12

--- a/class-12/demo/back-end/sample.env
+++ b/class-12/demo/back-end/sample.env
@@ -1,2 +1,4 @@
 PORT=3001
 DATABASE_URL=mongodb://127.0.0.1:27017/cats
+# ATLAS
+# DATABASE_URL=mongodb+srv://<username>:<password>@cluster-jb.uymzh.mongodb.net/<databasename>?retryWrites=true&w=majority
